--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020", "DOM"],
-    "module": "ESNext",
+    "lib": ["ES2020"],
+    "module": "None",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "rootDir": "src",
     "outDir": "dist",
     "experimentalDecorators": true,
-    "types": ["@google/clasp", "@types/google-apps-script"]
+    "types": ["@types/google-apps-script"]
   },
   "include": [
     "src/**/*.ts"
