--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,11 @@
-# Dependencies
-/node_modules
-/client/node_modules
+node_modules/
+client/
+src/
+package.json
 package-lock.json
-
-# Build artifacts
-/dist
-/client/dist
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# IDEs and editors
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+typescript.json
+.clasp.json
+.claspignore
+.geminiignore
+.gitignore
+.git/
