feat: Netlifyビルドエラーを修正し、GAS連携機能を実装 - .gitignoreからclient/とsrc/を除外し、config.jsとapi/gas.jsを新規作成、ProductMasterPage.jsxのインポートパスを修正、client/dist/とclient/netlify.tomlを.gitignoreに追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 node_modules/
-client/
-src/
 package.json
 package-lock.json
 typescript.json
@@ -9,3 +7,5 @@ typescript.json
 .geminiignore
 .gitignore
 .git/
+client/dist/
+client/netlify.toml
