Fix: Directly call vite executable in netlify.toml build command

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm --prefix client run build"
+  command = "./client/node_modules/.bin/vite build"
   publish = "client/dist"
   functions = "./netlify/functions"
 
